Fixed sliders scrollbar

--- a/src/style/partials/common.sass
+++ b/src/style/partials/common.sass
@@ -488,6 +488,7 @@ ul, li
 	justify-content: center
 	align-items: center
 	background: transparent
+	cursor: pointer
 	&::after
 		content: ''
 		display: block
